--- a/public/sass/helpers/_gradients.scss
+++ b/public/sass/helpers/_gradients.scss
@@ -72,6 +72,6 @@
         146deg, $color3, transparent 20%, $color1 24%, $color1 26%,
         transparent 30%, transparent 70%, $color1 74%, $color1 76%,
         transparent 80%, $color3);
-    background-size: $scrnhgt * 0.24 $scrnhgt * 0.16;
+    background-size: $screen_h * 0.24 $screen_h * 0.16;
     background-position: center;
 }
