--- a/public/style/index.css
+++ b/public/style/index.css
@@ -293,6 +293,113 @@ input[type=submit], input[type=submit]:focus {
     border-radius: 20% 20% 20% 20%; }
   100% {
     border-radius: 20% 20% 20% 20%; } }
+#header {
+  background: rgba(18, 85, 33, 0.75);
+  background: -webkit-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: -o-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: -moz-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  width: 100vw;
+  max-width: 100vw;
+  min-width: 100vw;
+  height: 10vh;
+  max-height: 10vh;
+  min-height: 10vh;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: row;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-align-content: flex-end;
+  align-content: flex-end;
+  transition: all 1s;
+  width: 100vw; }
+
+.button {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  width: 10vw;
+  max-width: 10vw;
+  min-width: 10vw;
+  height: 7vh;
+  max-height: 7vh;
+  min-height: 7vh;
+  font-size: 3.5vh;
+  color: #DCFEED; }
+
+#log-in:hover, #sign-up:hover {
+  color: #125521; }
+
+#log-in:active, #sign-up:active {
+  color: #76EB87; }
+
+#username {
+  width: 30vw;
+  max-width: 30vw;
+  min-width: 30vw;
+  height: 7vh;
+  max-height: 7vh;
+  min-height: 7vh; }
+
+@media screen and (orientation: portrait) {
+  #header {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 6vh;
+    max-height: 6vh;
+    min-height: 6vh;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    -webkit-align-content: center;
+    align-content: center; }
+
+  .button {
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    width: 30vw;
+    max-width: 30vw;
+    min-width: 30vw;
+    height: 4.2vh;
+    max-height: 4.2vh;
+    min-height: 4.2vh;
+    font-size: 2.1vh;
+    color: #DCFEED; } }
 #logo {
   background-color: #DCFEED;
   background-image: -webkit-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -webkit-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
@@ -368,77 +475,6 @@ input[type=submit], input[type=submit]:focus {
 body {
   background-color: #DCFEED;
   overflow: hidden; }
-
-#header {
-  background: rgba(18, 85, 33, 0.75);
-  background: -webkit-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: -o-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: -moz-linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  width: 100vw;
-  max-width: 100vw;
-  min-width: 100vw;
-  height: 10vh;
-  max-height: 10vh;
-  min-height: 10vh;
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  -webkit-flex-direction: row;
-  -webkit-justify-content: space-around;
-  -webkit-align-items: center;
-  -webkit-align-content: space-around;
-  -webkit-flex-wrap: wrap;
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-around;
-  flex-wrap: wrap;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-  -webkit-align-content: flex-end;
-  align-content: flex-end;
-  transition: all 1s;
-  width: 100vw; }
-
-.button {
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: space-around;
-  -webkit-align-items: center;
-  -webkit-align-content: space-around;
-  -webkit-flex-wrap: wrap;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-around;
-  flex-wrap: wrap;
-  width: 10vw;
-  max-width: 10vw;
-  min-width: 10vw;
-  height: 7vh;
-  max-height: 7vh;
-  min-height: 7vh;
-  font-size: 3.5vh;
-  color: #DCFEED; }
-
-#log-in:hover, #sign-up:hover {
-  color: #125521; }
-
-#log-in:active, #sign-up:active {
-  color: #76EB87; }
-
-#username {
-  width: 30vw;
-  max-width: 30vw;
-  min-width: 30vw;
-  height: 7vh;
-  max-height: 7vh;
-  min-height: 7vh; }
 
 #container {
   display: -webkit-flex;
@@ -585,78 +621,7 @@ a, a:visited, a:link {
   text-decoration: none;
   cursor: pointer; }
 
-#footer {
-  background: rgba(18, 85, 33, 0.75);
-  background: -webkit-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: -o-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: -moz-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  background: linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: space-around;
-  -webkit-align-items: center;
-  -webkit-align-content: space-around;
-  -webkit-flex-wrap: wrap;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-around;
-  flex-wrap: wrap;
-  width: 100vw;
-  max-width: 100vw;
-  min-width: 100vw;
-  height: 6vh;
-  max-height: 6vh;
-  min-height: 6vh;
-  font-size: 3vh;
-  color: #125521; }
-  #footer a, #footer a:visited, #footer a:link {
-    color: #125521; }
-  #footer a:hover {
-    color: #DCFEED; }
-  #footer a:active {
-    color: #125521; }
-
 @media screen and (orientation: portrait) {
-  #header {
-    width: 100vw;
-    max-width: 100vw;
-    min-width: 100vw;
-    height: 6vh;
-    max-height: 6vh;
-    min-height: 6vh;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    -webkit-align-content: center;
-    align-content: center; }
-
-  .button {
-    display: -webkit-flex;
-    -webkit-flex: 1;
-    -webkit-flex-direction: column;
-    -webkit-justify-content: space-around;
-    -webkit-align-items: center;
-    -webkit-align-content: space-around;
-    -webkit-flex-wrap: wrap;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-around;
-    flex-wrap: wrap;
-    width: 30vw;
-    max-width: 30vw;
-    min-width: 30vw;
-    height: 4.2vh;
-    max-height: 4.2vh;
-    min-height: 4.2vh;
-    font-size: 2.1vh;
-    color: #DCFEED; }
-
   #container {
     display: -webkit-flex;
     -webkit-flex: 1;
@@ -765,8 +730,43 @@ a, a:visited, a:link {
     background-color: #21CC43;
     font-size: 3.47143vh;
     color: #125521;
-    margin: 1.73571vh auto; }
+    margin: 1.73571vh auto; } }
+#footer {
+  background: rgba(18, 85, 33, 0.75);
+  background: -webkit-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: -o-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: -moz-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  background: linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  width: 100vw;
+  max-width: 100vw;
+  min-width: 100vw;
+  height: 6vh;
+  max-height: 6vh;
+  min-height: 6vh;
+  font-size: 3vh;
+  color: #125521; }
+  #footer a, #footer a:visited, #footer a:link {
+    color: #125521; }
+  #footer a:hover {
+    color: #DCFEED; }
+  #footer a:active {
+    color: #125521; }
 
+@media screen and (orientation: portrait) {
   #footer {
     width: 100vw;
     max-width: 100vw;
